--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,5 @@
-url=https://facebook.com/
-chrome_driver_path=/usr/local/Cellar/chromedriver/2.32/bin/chromedriver
+url=https://www.facebook.com/
+chrome_driver_path=/usr/local/bin/chromedriver
+amazon_url=https://www.amazon.com/
+dark_sky_url=https://darksky.net/
+hotels_url=https://www.hotels.com/
